# sha2-hashing

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  main.rs
